Added support for custom delimiters like //;\n1;2 in StringCalculator